--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 <body>
   <main>
     <h1>Vanilla JavaScript App</h1>
-    <h2>Hola quiero una beca </h2>
+    <h2 style:blue>Hola quiero una beca </h2>
   </main>
 </body>
 
