--- a/index.html
+++ b/index.html
@@ -5,13 +5,15 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="stylesheet" href="styles.css">
-  <title>Vanilla JavaScript App</title>
+  <title>Eduardo Galindo Martinez</title>
 </head>
 
 <body>
   <main>
     <h1>Vanilla JavaScript App</h1>
-    <h2 style:blue>Hola quiero una beca </h2>
+    <h2>Hola quiero una beca </h2>
+    <h3>puedo hacer mas cosas pero tengo éxamen</h3>
+    <p>Por cierto me gusta mucho el esta preview de las static web apps</p>
   </main>
 </body>
 
