--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     <h1>Vanilla JavaScript App</h1>
     <h2>Hola quiero una beca </h2>
     <h3>puedo hacer mas cosas pero tengo éxamen</h3>
-    <p>Por cierto me gusta mucho el esta preview de las static web apps</p>
+    <p>Por cierto me gusta mucho esta preview de las static web apps</p>
   </main>
 </body>
 
