--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 <body>
   <main>
     <h1>Prueba de Azure Static Web Apps</h1>
-    <h2>Hola quiero una beca </h2>
+    <h2>¡Hola quiero una beca por favor! uwu </h2>
     <h3>puedo hacer mas cosas pero tengo éxamen</h3>
     <p>Por cierto me gusta mucho esta preview de las static web apps, espero poder hacer algo con este servicio, saludos y muchas Gracias, por la clase! <3</p>
     <p> https://brave-ocean-05fc4af10.azurestaticapps.net </p>
